# Pushed.Messaging.Aurora.Library

./: .gitignore  AUTHORS  CHANGELOG.md  README.md  manifest.json  pubspec.yaml
aurora/: CMakeLists.txt  aurora_push_service_plugin.cpp  pushed_messaging_plugin.cpp
aurora/include/aurora_push_service/: aurora_push_service_plugin.h  plugincontroller.cpp  plugincontroller.h  pluginservice.cpp  types.h
aurora/include/pushed_messaging/: globals.h  plugincontroller.cpp  plugincontroller.h  pluginservice.cpp  pluginservice.h  pushed_messaging_plugin.h
example/: .gitignore  CMakePresets.json  README.md  launch.json  pubspec.yaml
example/assets/localization/: en.json  ru.json
example/aurora/: CMakeLists.txt  main.cpp
example/aurora/desktop/: com.example.aurora_push_example.desktop  com.multipushed.mp.desktop
example/aurora/rpm/: com.example.pushed_demo_aurora.spec
example/lib/: main.dart  main_screen.dart
example/test/: widget_test.dart
example/tools/: build.md
flutter-embedder/flutter/: basic_plugin.h  encodable_value.h  engine_method_result.h  error_or.h  flutter_aurora.h  flutter_aurora_capi.h  flutter_aurora_egl_api.h  flutter_aurora_export.h  flutter_compatibility_qt.h  flutter_logger.h  flutter_texture_registrar.h  plugin_registrar.h  standard_codec_serializer.h  standard_message_codec.h  standard_method_codec.h  texture_registrar.h
lib/: pushed_messaging.dart
lib/src/: aurora_push_exception.dart  aurora_push_message.dart  aurora_push_platform_interface.dart  method_channel_messaging.dart  pushed_messaging.dart  pushed_messaging_aurora.dart  pushed_messaging_platform_interface.dart
test/: aurora_push_method_channel_test.dart
